@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.5.2
+VERSION=1.5.3
 
-DEPENDENCY="zeda=1.7.3;zm=1.7.1"
+DEPENDENCY="zeda=1.7.7;zm=1.7.3"
