@@ -1,3 +1,4 @@
+2023. 6. 1. Reflected modification of zeda-makefile-gen to keep dzco_export.h. [dzco_export]
 2023. 5.21. Reflected new specification of ZDEF_STRUCT and ZDEF_UNION. [dz_tf, dz_tf_fr, dz_sys, dz_lin]
 2023. 5.20. Reflected new specification of zeda-makefile-gen, and modified src/makefile. [src]
 2023. 5.16. Replaced __EXPORT to __DZCO_EXPORT. [all]
